--- a/machine.html
+++ b/machine.html
@@ -88,7 +88,7 @@
 <p>5 days ago ... Familiar in using common algorithms (SVM, Naive Bayes, Random Forest) and 
 Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
+<h5><a href='https://engineering.academickeys.com/job/yqowp9mj/'>University Job: Assistant Professor (Tenure Track) in Electrical &amp; Computer Engineering (AI &amp; Machine Learning), Ryerson University</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -159,7 +159,7 @@ the center of our core mission, building state of the art technologies. You will
 reinforcement learning and transfer learning) to real world problems. Provide 
 research?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
@@ -178,7 +178,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
 healthcare?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -204,7 +204,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -273,7 +273,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.apple.com/jobs/us/teams/machine-learning-and-ai.html'>Machine Learning and AI - Jobs at Apple</a></h5> 
+<h5><a href='https://www.apple.com/jobs/us/teams/machine-learning-and-ai.html'>Machine Learning and AI - Jobs at Apple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -283,7 +283,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 Machine Learning Scientists to explore and understand the latest in AI, NLP, and 
 ML;?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -350,7 +350,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/440723-machine-learning-engineer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Machine Learning ... | JOIN</a></h5> 
+<h5><a href='https://verticalscale.join.com/jobs/440723-machine-learning-engineer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Machine Learning ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -426,7 +426,7 @@ to?...</p>
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/asapp-2/447e93d3-528b-414a-897f-863077a2717a'>ASAPP - Machine Learning Platform Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/asapp-2/447e93d3-528b-414a-897f-863077a2717a'>ASAPP - Machine Learning Platform Engineer</a></h5> 
 <p><span class="badge badge-light">Buenos Aires  Buenos Aires</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -463,11 +463,11 @@ Company. Founded in 2016, ThirdEye uses AI to automate the world's 245m?...</p>
 your knowledge and curiosity, empower you to be creative, ambitious, & bold, 
 and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1446347'>Job Application for Senior Machine Learning Engineer, Monetization at Reddit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/reddit/jobs/1446347'>Job Application for Senior Machine Learning Engineer, Monetization at Reddit</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PubMatic/743999697584065-senior-data-scientist-machine-learning-engineer'>PubMatic Senior Data Scientist / Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PubMatic/743999697584065-senior-data-scientist-machine-learning-engineer'>PubMatic Senior Data Scientist / Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -479,7 +479,7 @@ and?...</p>
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -491,7 +491,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://www.cs.cmu.edu/~rayid/jobs.html?fbclid=IwAR1UxTT-6H6XdriaFPuYPqFtGGb65lpz0V3Gz30zxvKPS0w5RoKLFjEJHp4'>Carnegie Mellon University Jobs ? Rayid Ghani - AI, Machine Learning, Data Science for Social Good and Public Policy</a></h5> 
+<h5><a href='http://www.cs.cmu.edu/~rayid/jobs.html?fbclid=IwAR1UxTT-6H6XdriaFPuYPqFtGGb65lpz0V3Gz30zxvKPS0w5RoKLFjEJHp4'>Carnegie Mellon University Jobs ? Rayid Ghani - AI, Machine Learning, Data Science for Social Good and Public Policy</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
@@ -499,7 +499,7 @@ and?...</p>
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
