--- a/deep-learning.html
+++ b/deep-learning.html
@@ -73,12 +73,12 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -171,7 +171,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-internship-mobility-robustness-optimization-through-deep-reinforcement-learning-36253'>Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -192,7 +192,7 @@ Skills at Crisalix.</p>
 <p>Oct 3, 2019 ... Deep Learning Engineer - Scene Understanding. San Francisco. Engineering. 
 Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?...</p>
 <hr/>
-<h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
       Senior AI Scientist - Deep Learning for Natural Language Processing - Covera Health
     </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -272,7 +272,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -423,7 +423,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
