--- a/project-manager.html
+++ b/project-manager.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=o0NSafwz&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nVn7nMw3'>Herjavec Group Careers - Program Manager, Product Marketing</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.talkdesk.com/careers/td/porto/engineering/summer-internship-1915435?gh_jid=1915435'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
@@ -49,7 +49,7 @@
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.talkdesk.com/careers/td/lisbon/engineering/summer-internship-1915407?gh_jid=1915407'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.talkdesk.com/careers/td/lehi/professional-services/project-manager-professional-services-1933323?gh_jid=1933323'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436962-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436962-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngx4nMwv&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngx4nMwv&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Iselin, New Jersey</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -202,11 +202,11 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Metia/743999698426712-project-manager'>Metia Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Metia/743999698426712-project-manager'>Metia Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX London Seattle Austin Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -226,7 +226,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oaN89fwY&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=njRMnMwA'>Palo Alto Networks Careers - Senior Technical Program Manager (Public Cloud)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oaN89fwY&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=njRMnMwA'>Palo Alto Networks Careers - Senior Technical Program Manager (Public Cloud)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -258,7 +258,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/goalsyria/jobs/1934835'>Job Application for Area Food Voucher Deputy Program Manager-Temporary at GOAL Syria</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goalsyria/jobs/1934835'>Job Application for Area Food Voucher Deputy Program Manager-Temporary at GOAL Syria</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -336,7 +336,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fticonsult.referrals.selectminds.com/jobs/forensic-litigation-consulting-programme-manager-senior-director-8242'>Forensic & Litigation Consulting - Programme Manager - Senior Director - FTI Consulting Inc Careers</a></h5> 
+<h5><a href='https://fticonsult.referrals.selectminds.com/jobs/forensic-litigation-consulting-programme-manager-senior-director-8242'>Forensic & Litigation Consulting - Programme Manager - Senior Director - FTI Consulting Inc Careers</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
