--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/hunterdouglas/job/o0z1afwu'>Hunter Douglas Inc. Careers - Associate Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://dito.recruiterbox.com/jobs/fk03dsj'>
+    Product Designer S?nior at Dito
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698440215-digital-product-owner-entry-mid-and-senior-levels-available-'>Cermati.com Digital Product Owner (Entry, Mid and Senior Levels Available) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/howden/8d5f6296-6c85-421c-93f5-1ef6b69f00a5'>Howden - Product Manager - Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -56,7 +70,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -64,7 +78,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -76,7 +90,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/vividseats/job/oHXWafwu'> Vivid Seats Careers - Product Manager / Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vividseats/job/oHXWafwu'> Vivid Seats Careers - Product Manager / Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -88,7 +102,7 @@
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bark.recruiterbox.com/jobs/fk03o6r/'>
+<h5><a href='https://bark.recruiterbox.com/jobs/fk03o6r/'>
     Senior Product Designer at Bark
 </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -160,7 +174,7 @@
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Medfar/743999698311406-product-owner'>Medfar Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +357,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://beyli.recruitee.com/l/fr/o/product-managerin-product-ownerwmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://beyli.recruitee.com/l/fr/o/product-managerin-product-ownerwmd'>
       Product ManagerIn / Product Owner(w/m/d) - :beyli
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
@@ -353,7 +367,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oyqobfwh&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n17VmMwG'>Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oyqobfwh&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n17VmMwG'>Guidewire Software, Inc. Careers - Senior Product Manager, Digital Apps - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -373,7 +387,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://fincite.join.com/jobs/459680-product-owner-cios-connect-m-w-d'>Job @ Fincite (Frankfurt am Main): Product Owner -... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fincite.join.com/jobs/459680-product-owner-cios-connect-m-w-d'>Job @ Fincite (Frankfurt am Main): Product Owner -... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -397,7 +411,7 @@ and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -431,7 +445,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
+<h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -445,23 +459,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24961-Product-Designer?source=twitter'>
-      Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://elevate-security.breezy.hr/p/303f7134ae64-senior-product-designer'>Senior Product Designer at Elevate Security</a></h5> 
-<p><span class="badge badge-light">Montreal, QC</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
-      Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
